--- a/sellection_bias.ipynb
+++ b/sellection_bias.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "private_outputs": true,
-      "provenance": [],
-      "authorship_tag": "ABX9TyOoSRajjbURXe9rt6Gz81Ao",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/umedadada/nikkei_software_202307/blob/master/sellection_bias.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -29,14 +12,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# !rm -r -f ./nikkei_software_202307"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "o43bjP6TZWrG"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# !rm -r -f ./nikkei_software_202307"
+      ]
     },
     {
       "cell_type": "code",
@@ -51,54 +34,59 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "15N4NuQ_Xd8P"
+      },
+      "outputs": [],
       "source": [
         "# 使用ライブラリの呼び出し\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import plotly.graph_objects as go\n",
         "import plotly.express as px"
-      ],
-      "metadata": {
-        "id": "15N4NuQ_Xd8P"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df=pd.read_csv('/content/nikkei_software_202307/sellectionBias.csv')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "nGuI09gwXi9c"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "df=pd.read_csv('/content/nikkei_software_202307/data/sellectionBias.csv')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "fig=px.scatter(df,x='english',y='mathmatics')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "pN3j_HIaXtct"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "fig=px.scatter(df,x='english',y='mathmatics')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "fig.show()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "APYXV_hMYBwH"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "fig.show()"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "feZBE_U-j1SJ"
+      },
+      "outputs": [],
       "source": [
         "x=np.arange(0, 200, 0.1)\n",
         "y=260-x\n",
@@ -106,26 +94,26 @@
         "tmp=pd.DataFrame()\n",
         "tmp['english']=x\n",
         "tmp['mathmatics']=y"
-      ],
-      "metadata": {
-        "id": "feZBE_U-j1SJ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "fig=go.Figure()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "CQ92RCywjlec"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "fig=go.Figure()"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "yJaiym4obFu5"
+      },
+      "outputs": [],
       "source": [
         "fig.add_trace(\n",
         "  go.Scatter(\n",
@@ -160,54 +148,66 @@
         ")\n",
         "\n",
         "fig.show()"
-      ],
-      "metadata": {
-        "id": "yJaiym4obFu5"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "bias_df=df[df['english']+df['mathmatics']>260]"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "e8ZxAXq-YDiC"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "bias_df=df[df['english']+df['mathmatics']>260]"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "fig=px.scatter(bias_df,x='english',y='mathmatics')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "fvbybnBZYlsB"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "fig=px.scatter(bias_df,x='english',y='mathmatics')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "fig.show()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Pt_oknBcYqk8"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "fig.show()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "xpcduOLiYsan"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyOoSRajjbURXe9rt6Gz81Ao",
+      "include_colab_link": true,
+      "private_outputs": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
