--- a/sellection_bias.ipynb
+++ b/sellection_bias.ipynb
@@ -1,10 +1,27 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "private_outputs": true,
+      "provenance": [],
+      "authorship_tag": "ABX9TyMyR4wEfFjWsWKe14iPcr3B",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/umedadada/nikkei_software_202307/blob/master/sellection_bias.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -12,14 +29,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "# !rm -r -f ./nikkei_software_202307"
+      ],
       "metadata": {
         "id": "o43bjP6TZWrG"
       },
-      "outputs": [],
-      "source": [
-        "# !rm -r -f ./nikkei_software_202307"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -34,94 +51,110 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "15N4NuQ_Xd8P"
-      },
-      "outputs": [],
       "source": [
         "# 使用ライブラリの呼び出し\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import plotly.graph_objects as go\n",
         "import plotly.express as px"
-      ]
+      ],
+      "metadata": {
+        "id": "15N4NuQ_Xd8P"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "df=pd.read_csv('/content/nikkei_software_202307/sellectionBias.csv')"
+      ],
       "metadata": {
         "id": "nGuI09gwXi9c"
       },
-      "outputs": [],
-      "source": [
-        "df=pd.read_csv('/content/nikkei_software_202307/data/sellectionBias.csv')"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "fig=px.scatter(df,x='english',y='mathmatics')"
+      ],
       "metadata": {
         "id": "pN3j_HIaXtct"
       },
-      "outputs": [],
-      "source": [
-        "fig=px.scatter(df,x='english',y='mathmatics')"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "fig.show()"
+      ],
       "metadata": {
         "id": "APYXV_hMYBwH"
       },
-      "outputs": [],
-      "source": [
-        "fig.show()"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "feZBE_U-j1SJ"
-      },
-      "outputs": [],
       "source": [
+        "# 直線を引くためのデータ\n",
         "x=np.arange(0, 200, 0.1)\n",
         "y=260-x\n",
         "\n",
         "tmp=pd.DataFrame()\n",
         "tmp['english']=x\n",
-        "tmp['mathmatics']=y"
-      ]
+        "tmp['mathmatics']=y\n",
+        "\n",
+        "# 色分けするためのデータ\n",
+        "passDf=df[df['english']+df['mathmatics']>=260]\n",
+        "dropDf=df[df['english']+df['mathmatics']<260]\n",
+        "passDf['type']='pass'\n",
+        "dropDf['type']='drop'\n",
+        "df=pd.concat([passDf,dropDf])"
+      ],
+      "metadata": {
+        "id": "feZBE_U-j1SJ"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
+      "source": [
+        "len(df)"
+      ],
+      "metadata": {
+        "id": "4azL0I8ZpENH"
+      },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# fig=go.Figure()"
+      ],
       "metadata": {
         "id": "CQ92RCywjlec"
       },
-      "outputs": [],
-      "source": [
-        "fig=go.Figure()"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "yJaiym4obFu5"
-      },
-      "outputs": [],
       "source": [
-        "fig.add_trace(\n",
-        "  go.Scatter(\n",
-        "    x=df['english'],  # 範囲の点列\n",
-        "    y=df['mathmatics'],\n",
-        "    mode='markers', opacity=0.7,  # 範囲の点列\n",
-        "    showlegend=False\n",
-        "))\n",
+        "# fig.add_trace(\n",
+        "#   go.Scatter(\n",
+        "#     x=df['english'],  # 範囲の点列\n",
+        "#     y=df['mathmatics'],\n",
+        "#     color='type',\n",
+        "#     mode='markers', opacity=0.7,  # 範囲の点列\n",
+        "#     showlegend=False\n",
+        "# ))\n",
+        "fig=px.scatter(df,x='english',y='mathmatics',color='type')\n",
         "fig.add_trace(\n",
         "  go.Scatter(\n",
         "    name='合格ライン',\n",
@@ -148,66 +181,54 @@
         ")\n",
         "\n",
         "fig.show()"
-      ]
+      ],
+      "metadata": {
+        "id": "yJaiym4obFu5"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "bias_df=df[df['english']+df['mathmatics']>260]"
+      ],
       "metadata": {
         "id": "e8ZxAXq-YDiC"
       },
-      "outputs": [],
-      "source": [
-        "bias_df=df[df['english']+df['mathmatics']>260]"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "fig=px.scatter(bias_df,x='english',y='mathmatics')"
+      ],
       "metadata": {
         "id": "fvbybnBZYlsB"
       },
-      "outputs": [],
-      "source": [
-        "fig=px.scatter(bias_df,x='english',y='mathmatics')"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "fig.show()"
+      ],
       "metadata": {
         "id": "Pt_oknBcYqk8"
       },
-      "outputs": [],
-      "source": [
-        "fig.show()"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [],
       "metadata": {
         "id": "xpcduOLiYsan"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": null,
+      "outputs": []
     }
-  ],
-  "metadata": {
-    "colab": {
-      "authorship_tag": "ABX9TyOoSRajjbURXe9rt6Gz81Ao",
-      "include_colab_link": true,
-      "private_outputs": true,
-      "provenance": []
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
