Colaboratory を使用して作成しました

--- a/sellection_bias.ipynb
+++ b/sellection_bias.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMyR4wEfFjWsWKe14iPcr3B",
+      "authorship_tag": "ABX9TyMGe8pcMNvrODtJ006kWoap",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,7 +78,23 @@
     {
       "cell_type": "code",
       "source": [
-        "fig=px.scatter(df,x='english',y='mathmatics')"
+        "fig=px.scatter(df,x='english',y='mathmatics')\n",
+        "\n",
+        "# 横軸の設定\n",
+        "xaxis = {\n",
+        "  \"title\": \"english\",  # 軸ラベル\n",
+        "  \"range\": (0, 200),  # 表示範囲\n",
+        "}\n",
+        "# 縦軸の設定\n",
+        "yaxis = {\n",
+        "  \"title\": \"mathmatics\",  # 軸ラベル\n",
+        "  \"range\": (0, 200),  # 表示範囲\n",
+        "}\n",
+        "# グラフのレイアウトを変更\n",
+        "fig.update_layout(\n",
+        "  xaxis=xaxis,  # 横軸\n",
+        "  yaxis=yaxis,  # 縦軸\n",
+        ")"
       ],
       "metadata": {
         "id": "pN3j_HIaXtct"
